fixing scrollbar

--- a/src/components/Todos.css
+++ b/src/components/Todos.css
@@ -8,3 +8,7 @@
   overflow-y: scroll;
   padding: 10px 20px;
 }
+
+::-webkit-scrollbar {
+  display: none;
+}
